Now have a crappy OptionsActivity

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -61,6 +61,12 @@
       android:label="@string/confirmation"
       >
     </activity>
+    
+    <activity
+      android:name="com.davidykay.lazyfood.OptionsActivity"
+      android:label="@string/options"
+      >
+    </activity>
 
 
 
