--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -68,6 +68,12 @@
       >
     </activity>
 
+    <activity
+      android:name="com.davidykay.lazyfood.MealEditActivity"
+      android:label="@string/edit_meal"
+      >
+    </activity>
+
 
 
   </application>
